--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,5 +1,8 @@
 name: Publish Docker image to GitHub Package Registry
-on: push
+on: 
+  push:
+    branches: 
+      - master
 jobs:
   build:
     runs-on: self-hosted 
