--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -5,7 +5,7 @@ on:
       - master
 jobs:
   build:
-    runs-on: self-hosted 
+    runs-on: ubuntu-latest
     steps:
 
     - name: Copy Repo Files
