--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -20,7 +20,7 @@ jobs:
         IMAGE_NAME: 'sftp'
         TAG: 'sftp'
         DOCKERFILE_PATH: 'Dockerfile'
-        BUILD_CONTEXT: ''
+        BUILD_CONTEXT: '.'
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
